# arazzo-engine

./: .fuse_hidden001242d300000061  .gitignore  CONTRIBUTING.md  EXECUTE_PDF_WORKFLOW.md  LICENSE  NOTICE  README.md  RELEASE.md  SECURITY.md  SUPPORT.md  contract_extraction_workflow.arazzo.json  docling_usage.md  good_first_issue.md  googledrive_to_mistral_ocr.arazzo.json  pdf_analysis_workflow.arazzo.json  test_descriptions.py  test_etenders_download.arazzo.json  test_list_download_workflow.arazzo.json
.github/: dependabot.yml  (+1 more)
generator/: .env.example  .gitignore  README.md  config.toml  pyproject.toml
generator/arazzo_generator/analyzers/: __init__.py  base_analyzer.py  llm_analyzer.py  workflow_analysis_manager.py
generator/arazzo_generator/api/: app.py  run.py
generator/arazzo_generator/batch/: README.md  batch_generator.py  utils.py
generator/arazzo_generator/cli/: main.py  run.py
generator/arazzo_generator/generator/: arazzo_generator.py  components.py  generator_service.py  output_mapping_validator.py  reference_validator.py  workflow_builder.py
generator/arazzo_generator/llm/: direct_arazzo_generator.py  litellm_service.py
generator/arazzo_generator/parser/: openapi_parser.py
generator/arazzo_generator/security/: safe_paths.py
generator/arazzo_generator/utils/: config.py  exceptions.py  logging.py  serializer.py  yaml_utils.py
generator/arazzo_generator/validator/: arazzo_validator.py
generator/design/: arazzo-spec.md
generator/docker/: Dockerfile  README.md  docker-compose.yml  ecs-task-def.json
generator/tests/analyzers/: test_base_analyzer.py  test_llm_analyzer.py
generator/tests/api/: test_app.py
generator/tests/generator/: test_arazzo_generator.py  test_components.py  test_reference_validator.py  test_workflow_builder.py
generator/tests/llm/: test_llm_service.py  test_llm_service_format_endpoints.py  test_llm_service_initialisation.py  (+3 more)
(+103 files in other folders)
